--- a/student-log.html
+++ b/student-log.html
@@ -90,9 +90,13 @@
         <!-- end header -->
 
         <!-- start exam -->
-        <section class="exam">
+        <section class="exam student-log">
             <div class="container">
-                <img src="./images/banners/exam-banner.png" class="banner" alt="">
+                <div class="banner">
+                    <div>
+                        <h3> سجل الطالب</h3>
+                    </div>
+                </div>
 
                 <div class="material-filter owl-carousel owl-theme d-flex justify-content-center">
                     <!-- lop from here -->
@@ -134,26 +138,39 @@
                             <a href="#"><button class="btn-sec">نموذج الاجابة</button></a>
                            <a href="#"> <button class="third-btn">اعد الاختبار</button></a>
                         </div>
+
                         <div class="exam-list-box">
-                            <h5>الاختبار الثاني</h5>
-                            <a href="#"><button class="main-btn"> ابدا الان</button></a>
+                            <h5>الاختبار الاول</h5>
+                            <i class="fa-solid fa-circle-check"></i>
+                            <span class="spc-badge">النتيجة 80%</span>
+                            <a href="#"><button class="btn-sec">نموذج الاجابة</button></a>
+                           <a href="#"> <button class="third-btn">اعد الاختبار</button></a>
                         </div>
+
                         <div class="exam-list-box">
-                            <h5>الاختبار الثاني</h5>
-                            <a href="#"><button class="main-btn"> ابدا الان</button></a>
+                            <h5>الاختبار الاول</h5>
+                            <i class="fa-solid fa-circle-check"></i>
+                            <span class="spc-badge">النتيجة 80%</span>
+                            <a href="#"><button class="btn-sec">نموذج الاجابة</button></a>
+                           <a href="#"> <button class="third-btn">اعد الاختبار</button></a>
                         </div>
+
                         <div class="exam-list-box">
-                            <h5>الاختبار الثاني</h5>
-                            <a href="#"><button class="main-btn"> ابدا الان</button></a>
+                            <h5>الاختبار الاول</h5>
+                            <i class="fa-solid fa-circle-check"></i>
+                            <span class="spc-badge">النتيجة 80%</span>
+                            <a href="#"><button class="btn-sec">نموذج الاجابة</button></a>
+                           <a href="#"> <button class="third-btn">اعد الاختبار</button></a>
                         </div>
+
                         <div class="exam-list-box">
-                            <h5>الاختبار الثاني</h5>
-                            <a href="#"><button class="main-btn"> ابدا الان</button></a>
+                            <h5>الاختبار الاول</h5>
+                            <i class="fa-solid fa-circle-check"></i>
+                            <span class="spc-badge">النتيجة 80%</span>
+                            <a href="#"><button class="btn-sec">نموذج الاجابة</button></a>
+                           <a href="#"> <button class="third-btn">اعد الاختبار</button></a>
                         </div>
-                        <div class="exam-list-box">
-                            <h5>الاختبار الثاني</h5>
-                            <a href="#"><button class="main-btn"> ابدا الان</button></a>
-                        </div>
+                       
 
                         <nav aria-label="Page navigation example ">
                             <ul class="pagination justify-content-center">
