update client issues

--- a/exam.html
+++ b/exam.html
@@ -116,43 +116,43 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <ul class="sidebar list-unstyled">
-                            <li class="active">الفصل الاول</li>
-                            <li><a href="#"> الفصل الثاني </a></li>
-                            <li><a href="#"> الفصل الثالث </a></li>
-                            <li><a href="#"> الفصل الرابع </a></li>
-                            <li><a href="#"> الفصل الخامس </a></li>
-                            <li><a href="#"> الفصل السادس </a></li>
-                            <li><a href="#"> الفصل السابع </a></li>
-                            <li><a href="#"> الفصل الثامن </a></li>
+                            <li class="active">اسم الوحدة</li>
+                            <li><a href="#"> اسم الوحدة   </a></li>
+                            <li><a href="#"> اسم الوحدة   </a></li>
+                            <li><a href="#"> اسم الوحدة   </a></li>
+                            <li><a href="#"> اسم الوحدة   </a></li>
+                            <li><a href="#"> اسم الوحدة   </a></li>
+                            <li><a href="#"> اسم الوحدة   </a></li>
+                            <li><a href="#"> اسم الوحدة   </a></li>
                             <li><a href="#"> اختبارات شاملة </a> </li>
                         </ul>
                     </div>
                     <div class="col-sm-9">
                         <div class="exam-list-box">
-                            <h5>الاختبار الاول</h5>
+                            <h5> اسم الدرس</h5>
                             <i class="fa-solid fa-circle-check"></i>
                             <span class="spc-badge">النتيجة 80%</span>
                             <a href="#"><button class="btn-sec">نموذج الاجابة</button></a>
                            <a href="#"> <button class="third-btn">اعد الاختبار</button></a>
                         </div>
                         <div class="exam-list-box">
-                            <h5>الاختبار الثاني</h5>
+                            <h5> اسم الدرس</h5>
                             <a href="#"><button class="main-btn"> ابدا الان</button></a>
                         </div>
                         <div class="exam-list-box">
-                            <h5>الاختبار الثاني</h5>
+                            <h5> اسم الدرس</h5>
                             <a href="#"><button class="main-btn"> ابدا الان</button></a>
                         </div>
                         <div class="exam-list-box">
-                            <h5>الاختبار الثاني</h5>
+                            <h5> اسم الدرس</h5>
                             <a href="#"><button class="main-btn"> ابدا الان</button></a>
                         </div>
                         <div class="exam-list-box">
-                            <h5>الاختبار الثاني</h5>
+                            <h5> اسم الدرس</h5>
                             <a href="#"><button class="main-btn"> ابدا الان</button></a>
                         </div>
                         <div class="exam-list-box">
-                            <h5>الاختبار الثاني</h5>
+                            <h5> اسم الدرس</h5>
                             <a href="#"><button class="main-btn"> ابدا الان</button></a>
                         </div>
 
