--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <li class="list-inline-item"><a href="#"><img src="./images/icons/facebook.png" alt=""></a></li>
                 <li class="list-inline-item"><a href="#"><img src="./images/icons/twitter.png" alt=""></a></li>
-                <li class="list-inline-item"><a href="#"><img src="./images/icons/tiktok.png" alt=""></a></li>
+                <li class="list-inline-item"><a href="#"><img src="./images/icons/whats.png" alt=""></a></li>
 
               </ul>
             </div>
@@ -195,7 +195,7 @@
               </div>
               <div class="col-4">
                 <div class="serv-box center">
-                  <img src="./images/services/certificate.png" alt="">
+                  <img src="./images/services/eshtrakat.png" alt="">
                   <h4> اخطاء متكررة</h4>
                   <a href="#" class="arrow">
                     <i class="fa-solid fa-arrow-right"></i>
@@ -218,7 +218,7 @@
             <div class="row">
               <div class="col-4">
                 <div class="serv-box">
-                  <img src="./images/services/exam.png" alt="">
+                  <img src="./images/services/analysis.png" alt="">
                   <h4>تحليل الاداء</h4>
                   <a href="#" class="arrow">
                     <i class="fa-solid fa-arrow-right"></i>
@@ -227,7 +227,7 @@
               </div>
               <div class="col-4">
                 <div class="serv-box center">
-                  <img src="./images/services/certificate.png" alt="">
+                  <img src="./images/services/tarteb.png" alt="">
                   <h4>الترتيب </h4>
                   <a href="#" class="arrow">
                     <i class="fa-solid fa-arrow-right"></i>
@@ -238,7 +238,7 @@
                 <div class="serv-box">
                   <a href="#">
 
-                    <img src="./images/services/qa.png" alt="">
+                    <img src="./images/services/certificate.png" alt="">
                     <h4> الاشتراكات</h4>
                     <a href="#" class="arrow">
                       <i class="fa-solid fa-arrow-right"></i>
@@ -340,7 +340,7 @@
     <!-- end contct -->
 
     <div class="whats-btn">
-      <a href="#"><img src="./images/icons/facebook.png" alt=""></a>
+      <a target="_blank" href="https://api.whatsapp.com/send?phone=+2010000000000"><img src="./images/icons/whats.png" alt=""></a>
     </div>
 
     <!-- start footer -->
@@ -365,7 +365,7 @@
             <ul class="list-unstyled list-inline social">
               <li class="list-inline-item"><a href="#"><img src="./images/icons/facebook-w.png" alt=""></a></li>
               <li class="list-inline-item"><a href="#"><img src="./images/icons/twitter-w.png" alt=""></a></li>
-              <li class="list-inline-item"><a href="#"><img src="./images/icons/tiktok-w.png" alt=""></a></li>
+              <li class="list-inline-item"><a href="#"><img src="./images/icons/whats-w.png" alt=""></a></li>
             </ul>
           </div>
         </div>
