update new answers

--- a/exam-form.html
+++ b/exam-form.html
@@ -124,6 +124,7 @@
           </div>
 
           <form action="">
+            <!-- column-answers -->
             <div class="question-list">
               <div class="degree">
                 <h5>7 <span>درجات</span></h5>
@@ -159,6 +160,170 @@
                 <div class="col-sm-3">
                   <input type="radio" id="answerFour" name="question-one" />
                   <label for="answerFour">اجابة رقم اربعة</label>
+                </div>
+              </div>
+            </div>
+
+            <!-- row-answers change to col-sm-12 and add mb-2 -->
+            <div class="question-list">
+              <div class="degree">
+                <h5>7 <span>درجات</span></h5>
+              </div>
+              <div class="d-flex ques-list">
+                <div>
+                  <span class="number">1</span>
+                </div>
+                <div>
+                  <p>
+                    هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                    توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل
+                    هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد
+                    الحروف التى يولدها التطبيق. إذا كنت تحتاج إلى عدد أكبر من
+                    الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد،
+                    النص لن يبدو
+                  </p>
+                </div>
+              </div>
+              <div class="row ans-row">
+                <div class="col-sm-12 mb-2">
+                  <input type="radio" id="answerOne" name="question-one" />
+                  <label for="answerOne">اجابة رقم واحد</label>
+                </div>
+                <div class="col-sm-12 mb-2">
+                  <input type="radio" id="answerTwo" name="question-one" />
+                  <label for="answerTwo">اجابة رقم اثنين</label>
+                </div>
+                <div class="col-sm-12 mb-2">
+                  <input type="radio" id="answerThree" name="question-one" />
+                  <label for="answerThree">اجابة رقم ثلاثة</label>
+                </div>
+                <div class="col-sm-12 mb-2">
+                  <input type="radio" id="answerFour" name="question-one" />
+                  <label for="answerFour">اجابة رقم اربعة</label>
+                </div>
+              </div>
+            </div>
+
+            <!-- answer with image -->
+            <div class="question-list">
+              <div class="degree">
+                <h5>7 <span>درجات</span></h5>
+              </div>
+              <div class="d-flex ques-list">
+                <div>
+                  <span class="number">1</span>
+                </div>
+                <div>
+                  <p>
+                    هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                    توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل
+                    هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد
+                    الحروف التى يولدها التطبيق. إذا كنت تحتاج إلى عدد أكبر من
+                    الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد،
+                    النص لن يبدو
+                  </p>
+                </div>
+              </div>
+              <div class="row ans-row">
+                <div class="col-sm-3">
+                  <input type="radio" id="answerOne" name="question-one" />
+                  <label for="answerOne"> اجابة رقم واحد </label>
+                  <img
+                    class="mt-1"
+                    src="./images/exam/1.png"
+                    height="100"
+                    alt=""
+                  />
+                </div>
+                <div class="col-sm-3">
+                  <input type="radio" id="answerTwo" name="question-one" />
+                  <label for="answerTwo">اجابة رقم اثنين</label>
+                  <img
+                    class="mt-1"
+                    src="./images/exam/2.png"
+                    height="100"
+                    alt=""
+                  />
+                </div>
+                <div class="col-sm-3">
+                  <input type="radio" id="answerThree" name="question-one" />
+                  <label for="answerThree">اجابة رقم ثلاثة</label>
+                  <img
+                    class="mt-1"
+                    src="./images/exam/1.png"
+                    height="100"
+                    alt=""
+                  />
+                </div>
+                <div class="col-sm-3">
+                  <input type="radio" id="answerFour" name="question-one" />
+                  <label for="answerFour">اجابة رقم اربعة</label>
+                  <img
+                    class="mt-1"
+                    src="./images/exam/2.png"
+                    height="100"
+                    alt=""
+                  />
+                </div>
+              </div>
+            </div>
+
+            <!-- answer image only -->
+            <div class="question-list">
+              <div class="degree">
+                <h5>7 <span>درجات</span></h5>
+              </div>
+              <div class="d-flex ques-list">
+                <div>
+                  <span class="number">1</span>
+                </div>
+                <div>
+                  <p>
+                    هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم
+                    توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد مثل
+                    هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد
+                    الحروف التى يولدها التطبيق. إذا كنت تحتاج إلى عدد أكبر من
+                    الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد،
+                    النص لن يبدو
+                  </p>
+                </div>
+              </div>
+              <div class="row ans-row">
+                <div class="col-sm-3">
+                  <input type="radio" id="answerOne" name="question-one" />
+                  <img
+                    class="mt-1"
+                    src="./images/exam/1.png"
+                    height="100"
+                    alt=""
+                  />
+                </div>
+                <div class="col-sm-3">
+                  <input type="radio" id="answerTwo" name="question-one" />
+                  <img
+                    class="mt-1"
+                    src="./images/exam/2.png"
+                    height="100"
+                    alt=""
+                  />
+                </div>
+                <div class="col-sm-3">
+                  <input type="radio" id="answerThree" name="question-one" />
+                  <img
+                    class="mt-1"
+                    src="./images/exam/1.png"
+                    height="100"
+                    alt=""
+                  />
+                </div>
+                <div class="col-sm-3">
+                  <input type="radio" id="answerFour" name="question-one" />
+                  <img
+                    class="mt-1"
+                    src="./images/exam/2.png"
+                    height="100"
+                    alt=""
+                  />
                 </div>
               </div>
             </div>
