--- a/exam.html
+++ b/exam.html
@@ -147,28 +147,36 @@
                 <h5>اسم الدرس</h5>
                 <i class="fa-solid fa-circle-check"></i>
                 <span class="spc-badge">النتيجة 80%</span>
-                <a href="#"><button class="btn-sec">نموذج الاجابة</button></a>
-                <a href="#"> <button class="third-btn">اعد الاختبار</button></a>
+                <button class="btn-sec">نموذج الاجابة</button>
+
+                <button
+                  class="third-btn"
+                  type="button"
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                >
+                  اعد الاختبار
+                </button>
               </div>
               <div class="exam-list-box">
                 <h5>اسم الدرس</h5>
-                <a href="#"><button class="main-btn">ابدا الان</button></a>
+                <button class="main-btn">ابدا الان</button>
               </div>
               <div class="exam-list-box">
                 <h5>اسم الدرس</h5>
-                <a href="#"><button class="main-btn">ابدا الان</button></a>
+                <button class="main-btn">ابدا الان</button>
               </div>
               <div class="exam-list-box">
                 <h5>اسم الدرس</h5>
-                <a href="#"><button class="main-btn">ابدا الان</button></a>
+                <button class="main-btn">ابدا الان</button>
               </div>
               <div class="exam-list-box">
                 <h5>اسم الدرس</h5>
-                <a href="#"><button class="main-btn">ابدا الان</button></a>
+                <button class="main-btn">ابدا الان</button>
               </div>
               <div class="exam-list-box">
                 <h5>اسم الدرس</h5>
-                <a href="#"><button class="main-btn">ابدا الان</button></a>
+                <button class="main-btn">ابدا الان</button>
               </div>
 
               <nav aria-label="Page navigation example ">
@@ -251,6 +259,40 @@
       </footer>
       <!-- end footer -->
     </main>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">...</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!--  Bootstrap-->
     <script src="./js/popper.min.js"></script>
