--- a/index.html
+++ b/index.html
@@ -108,51 +108,40 @@
 
     <!-- start slider -->
     <section class="slider">
-      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="container">
-
-
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="row">
-                <div class="col-sm-9">
-                  <div class="right" style="background-image: url('./images/slider/bg.png');">
-                    <div class="row">
-                      <div class="col-lg-6">
-                        <div class="caption-box">
-                          <h3>هذا النص هو مثال</h3>
-                          <h3>لنص يمكن ان يستبدل في نفس</h3>
-                          <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
-                            العربى،
-                            حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص .</p>
-                          <button class="mt-3">اعرف المزيد</button>
-                        </div>
-                      </div>
-                      <div class="col-lg-5 offset-lg-1">
-                        <img src="./images/slider/left.png" class="left-img img-fluid" alt="">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-sm-3">
-                  <div class="score">
-                    <h5>مجموع نقاطك</h5>
-                    <h2>90</h2>
-                  </div>
-                </div>
-
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <!-- start slider -->
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleControls" data-bs-slide-to="1" aria-label="Slide 2"></button>
               </div>
-
-
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="rounded-3 w-100" src="./images/slider/one.png" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="rounded-3 w-100" src="./images/slider/one.png" alt="">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
-            <!-- <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
-      </div> -->
+            <!-- end slider -->
           </div>
-
+          <!-- <div class="col-sm-3">
+          <div class="score">
+            <h5>مجموع نقاطك</h5>
+            <h2>90</h2>
+          </div>
+        </div> -->
         </div>
       </div>
     </section>
@@ -320,27 +309,28 @@
     <section class="contact section-padding">
       <div class="container">
 
-   
-      <div class="row justify-content-center">
-        <div class="col-sm-6">
-          <div class="contact-box">
-            <span class="spc-badge">تواصل معنا</span>
-            <form action="">
-              <input type="text" placeholder="الاسم">
-              <input type="number" placeholder="رقم الهاتف ">
-              <textarea name="" placeholder="الرسالة"></textarea>
-              <button class="w-100 mt-3">ارسال</button>
 
-            </form>
+        <div class="row justify-content-center">
+          <div class="col-sm-6">
+            <div class="contact-box">
+              <span class="spc-badge">تواصل معنا</span>
+              <form action="">
+                <input type="text" placeholder="الاسم">
+                <input type="number" placeholder="رقم الهاتف ">
+                <textarea name="" placeholder="الرسالة"></textarea>
+                <button class="w-100 mt-3">ارسال</button>
+
+              </form>
+            </div>
           </div>
         </div>
-      </div>
       </div>
     </section>
     <!-- end contct -->
 
     <div class="whats-btn">
-      <a target="_blank" href="https://api.whatsapp.com/send?phone=+2010000000000"><img src="./images/icons/whats.png" alt=""></a>
+      <a target="_blank" href="https://api.whatsapp.com/send?phone=+2010000000000"><img src="./images/icons/whats.png"
+          alt=""></a>
     </div>
 
     <!-- start footer -->
