update testimonials img

--- a/index.html
+++ b/index.html
@@ -255,6 +255,22 @@
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
                   <div class="testi-box">
+                    <div class="d-flex">
+                      <img src="./images/profile/profile.png" class="person-img" alt="">
+                      <h4>اسماء صالح <span>طالبة بالصف الرابع</span></h4>
+                    </div>
+                    <p>
+                      هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد
+                      تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد
+                      مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة
+                      عدد الحروف التى يولدها التطبيق.
+                    </p>
+                  </div>
+                </div>
+
+                <div class="carousel-item" data-bs-interval="10000">
+                  <div class="testi-box">
+                    <img src="./images/profile/profile.png" class="person-img" alt="">
                     <h4>اسماء صالح <span>طالبة بالصف الرابع</span></h4>
                     <p>
                       هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد
@@ -267,18 +283,7 @@
 
                 <div class="carousel-item" data-bs-interval="10000">
                   <div class="testi-box">
-                    <h4>اسماء صالح <span>طالبة بالصف الرابع</span></h4>
-                    <p>
-                      هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد
-                      تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد
-                      مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة
-                      عدد الحروف التى يولدها التطبيق.
-                    </p>
-                  </div>
-                </div>
-
-                <div class="carousel-item" data-bs-interval="10000">
-                  <div class="testi-box">
+                    <img src="./images/profile/profile.png" class="person-img" alt="">
                     <h4>اسماء صالح <span>طالبة بالصف الرابع</span></h4>
                     <p>
                       هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد
